updated forms, integrated authentication complete

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
@@ -14,5 +15,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <!--- for dev -->
+    <script defer="defer" src="bundle.js"></script>
+    <!-- for production -->
+    <!-- <script src="../dist/bundle.js"></script> -->
   </body>
 </html>
